@@ -1,6 +1,7 @@
 Version 2.13 --> 2.14
 
 * Upgraded build system to work with automake 1.5 and autoconf 2.53.
+* Upgraded --read-functions functionality to work with bash 2.0.5b.
 
 Version 2.12 --> 2.13
 
